Fix bugs and improve new code